CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(MsgCls)

if(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release")
endif()
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -std=c++0x")
SET(CMAKE_CXX_FLAGS_DEBUG   "-Wall -O0 -std=c++0x -g")
SET(LIBRARY_OUTPUT_PATH    ${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

cmake_policy(SET CMP0015 NEW)

INCLUDE_DIRECTORIES(${INC_DIR} ${FLUENT_INCLUDES} ./src)
LINK_DIRECTORIES(${LIB_DIR} ${FLUENT_LIBRARIES})
FILE(GLOB BASESRCS "src/*.cc" "src/*.hpp")
FILE(GLOB TESTSRCS "test/*.cc")

# Module code
ADD_LIBRARY(msgcls SHARED ${BASESRCS})
TARGET_LINK_LIBRARIES(msgcls msgpack)

# Test code
ADD_EXECUTABLE(msgcls-test ${TESTSRCS})
TARGET_LINK_LIBRARIES(msgcls-test msgcls pthread)

# Application (CLI) code
ADD_EXECUTABLE(msgcls-bin cli/main.cc cli/optparse.cc)
SET_TARGET_PROPERTIES(msgcls-bin PROPERTIES OUTPUT_NAME msgcls)
TARGET_LINK_LIBRARIES(msgcls-bin msgcls)

INSTALL(TARGETS msgcls-bin RUNTIME DESTINATION bin)
INSTALL(TARGETS msgcls LIBRARY DESTINATION lib)
